// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Tests  renders in a component 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 16,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={100}
    selectable={false}
    style={
      [
        {
          "color": "rgba(28, 27, 31, 1)",
          "fontSize": 100,
        },
        {},
        {
          "fontFamily": "BrightlayerUIIcons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
  <Text
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontFamily": "System",
            "fontSize": 22,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 28,
          },
          [
            {
              "color": "rgba(28, 27, 31, 1)",
              "fontSize": 22,
              "letterSpacing": 0,
              "marginTop": 32,
              "textAlign": "center",
            },
            undefined,
          ],
        ],
      ]
    }
  >
    Test
  </Text>
</View>
`;

exports[`Icon Tests  renders with blui object source 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={100}
  selectable={false}
  style={
    [
      {
        "color": "rgba(28, 27, 31, 1)",
        "fontSize": 24,
      },
      {},
      {
        "fontFamily": "BrightlayerUIIcons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      {},
    ]
  }
>
  
</Text>
`;

exports[`Icon Tests  renders with emoji source 1`] = `
<Text
  style={
    [
      {
        "textAlign": "left",
      },
      {
        "color": "rgba(28, 27, 31, 1)",
        "writingDirection": "ltr",
      },
      [
        {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
        [
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontSize": 24,
            "lineHeight": 32,
          },
        ],
      ],
    ]
  }
>
  🍇
</Text>
`;

exports[`Icon Tests  renders with function source 1`] = `
<Text
  allowFontScaling={false}
  selectable={false}
  style={
    [
      {
        "color": "rgba(28, 27, 31, 1)",
        "fontSize": 24,
      },
      undefined,
      {
        "fontFamily": "BrightlayerUIIcons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      {},
    ]
  }
>
  
</Text>
`;

exports[`Icon Tests  renders with local image source 1`] = `null`;

exports[`Icon Tests  renders with material community object source 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={100}
  selectable={false}
  style={
    [
      {
        "color": "rgba(28, 27, 31, 1)",
        "fontSize": 24,
      },
      {},
      {
        "fontFamily": "Material Design Icons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      {},
    ]
  }
>
  󰄫
</Text>
`;

exports[`Icon Tests  renders with material object source 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={100}
  selectable={false}
  style={
    [
      {
        "color": "rgba(28, 27, 31, 1)",
        "fontSize": 24,
      },
      {},
      {
        "fontFamily": "Material Icons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      {},
    ]
  }
>
  
</Text>
`;

exports[`Icon Tests  renders with material object source 2`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={100}
  selectable={false}
  style={
    [
      {
        "color": "rgba(28, 27, 31, 1)",
        "fontSize": 24,
      },
      {},
      {
        "fontFamily": "Material Icons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      {},
    ]
  }
>
  
</Text>
`;

exports[`Icon Tests  renders with remote image source 1`] = `
<Image
  accessibilityElementsHidden={true}
  importantForAccessibility="no-hide-descendants"
  source={
    {
      "uri": "https://raw.githubusercontent.com/etn-ccis/blui-icons/dev/png/png48/account_settings_black500_48dp.png",
    }
  }
  style={
    [
      {
        "height": 24,
        "resizeMode": "contain",
        "width": 24,
      },
    ]
  }
/>
`;

exports[`Icon Tests  renders with string source 1`] = `
<Text
  style={
    [
      {
        "textAlign": "left",
      },
      {
        "color": "rgba(28, 27, 31, 1)",
        "writingDirection": "ltr",
      },
      [
        {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
        [
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontSize": 24,
            "lineHeight": 32,
          },
        ],
      ],
    ]
  }
>
  String
</Text>
`;
